# pyctl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsTemplate.txt  MANIFEST.in  Manifest.in  README.md  create_cmakelists.py  setup.py
ctl/: __init__.py  gui.py
ctl/cl_src/processing/: imageResampler.cl  planeIntegral.cl  radon2d.cl  volumeResampler.cl  volumeSlicer.cl
ctl/cl_src/projectors/: external_raycaster.cl  raycasterprojector_interp.cl  raycasterprojector_no_interp.cl
ctl/database/: references.md
ctl/database/attenuation_spectra/: a150.json  adipose.json  air.json  alanine.json  b100.json  bakelite.json  blood.json  bone.json  brain.json  breast.json  c552.json  calcium.json  ceric.json  cesium.json  concrete.json  concreteba.json  eye.json  fluoride.json  fricke.json  gadolinium.json  gafchromic.json  gallium.json  glass.json  kodak.json  lithium.json  lithiumflu.json  lung.json  magnesium.json  mercuric.json  muscle.json  mylar.json  nylonfilm.json  ovary.json  photoemul.json  pmma.json  polyethylene.json  polystyrene.json  polyvinyl.json  pyrex.json  teflon.json  (+100 more)
ctl/database/xray_spectra/: 120kVp_30deg_1000Air.json
examples/: areal_focal_spot.py  art_reconstruction.py  composite_volume.py  composite_volume_spectral.py  detector_saturation.py  fdk_reconstruction.py  nrrd_example.py  pipeline.py  poisson_noise.py  readme_example.py  simple_pipeline.py  spectral_effects.py  standard_pipeline.py  using_projection_matrices.py
pysrc/: gui.cpp  mat.cpp  ocl.cpp  ocl.h  pybind_common.h  pyctl.cpp  pysharedptr.h  qt_helper.cpp  qt_helper.h  utils.h
pysrc/acquisition/: abstractpreparestep.cpp  acquisitionsetup.cpp  ctsystem.cpp  ctsystembuilder.cpp  geometrydecoder.cpp  geometryencoder.cpp  preparationprotocols.cpp  preparesteps.cpp  radiationencoder.cpp  simplectsystem.cpp  systemblueprints.cpp  trajectories.cpp  viewgeometry.cpp
pysrc/components/: abstractbeammodifier.cpp  abstractdetector.cpp  abstractgantry.cpp  abstractsource.cpp  attenuationfilter.cpp  carmgantry.cpp  cylindricaldetector.cpp  flatpaneldetector.cpp  genericbeammodifier.cpp  genericdetector.cpp  genericgantry.cpp  genericsource.cpp  systemcomponent.cpp  tubulargantry.cpp  xraylaser.cpp  xraytube.cpp
pysrc/gui/: acquisitionsetupview.cpp  chunk2dview.cpp  ctsystemview.cpp  datamodelviewer.cpp  intersectionplaneview.cpp  pipelinecomposer.cpp  projectionviewer.cpp  volumesliceviewer.cpp  volumeviewer.cpp
pysrc/img/: chunk2d.cpp  compositevolume.cpp  modulelayout.cpp  projectiondata.cpp  projectiondataview.cpp  singleviewdata.cpp  sparsevoxelvolume.cpp  spectralvolumedata.cpp  voxelvolume.cpp
pysrc/io/: ctldatabase.cpp
pysrc/mat/: deg.cpp  matrix.cpp  matrix_utils.cpp  projectionmatrix.cpp
pysrc/models/: abstractdatamodel.cpp  detectorsaturationmodels.cpp
pysrc/ocl/: clfileloader.cpp  clfileloader.h
pysrc/processing/: abstractprojectionfilter.cpp  abstractvolumefilter.cpp  abstractvolumesparsifier.cpp  coordinates.cpp  genericoclprojectionfilter.cpp  oclprojectionfilters.cpp  range.cpp  thresholdvolumesparsifier.cpp
pysrc/projectors/: abstractprojector.cpp  abstractprojectorconfig.cpp  arealfocalspotextension.cpp  detectorsaturationextension.cpp  dynamicprojectorextension.cpp  poissonnoiseextension.cpp  projectionpipeline.cpp  projectorextension.cpp  raycasterprojector.cpp  raycasterprojectorcpu.cpp  sfpprojector.cpp  spectraleffectsextension.cpp  standardpipeline.cpp
pysrc/recon/: abstractreconstructor.cpp  abstractsubsetgenerator.cpp  artreconstructor.cpp  backprojectorbase.cpp  defaultsubsetgenerator.cpp  fdkreconstructor.cpp  regularizers.cpp  sfpbackprojector.cpp  simplebackprojector.cpp  simplebackprojectorcpu.cpp  simplesubsetgenerator.cpp  transitionschemeextension.cpp
